--- a/index.html
+++ b/index.html
@@ -9,8 +9,25 @@
     <br>
     <br>
     <br>
-    <br>
     <h1>This is a simple website hosted on a CentOS 8 Linux server running Apache. </hi>
+        <br>
+        <br>
+        <br>
+        <h2> Jenkins Job Builder YAML Configuration </h2>
+        <br>
+        <br>
+        <img src="Jenkins_YAML_Script.png" alt="Jenkins Yaml" class="center">
+        <br>
+        <br>
+        <h2> Ansible Playbook To Deploy Apache Application </h3>
+        <br>
+        <br>
+        <img src="Dep_App_Ansible_YAML.png" alt="Ansible Yaml" class="center">
+        <br>
+        <br>
+
+
 </body>
+
 
 </html>
