--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
         <h2> Jenkins Job Builder YAML Configuration </h2>
         <br>
         <br>
-        <img src="Jenkins_YAML_Script.png" alt="Jenkins Yaml" class="center">
+        <img src="Jenkins_YAML_Script.jpg" alt="Jenkins Yaml" class="center">
         <br>
         <br>
         <h2> Ansible Playbook To Deploy Apache Application </h3>
         <br>
         <br>
-        <img src="Dep_App_Ansible_YAML.png" alt="Ansible Yaml" class="center">
+        <img src="Dep_App_Ansible_YAML.jpg" alt="Ansible Yaml" class="center">
         <br>
         <br>
 
